# Urban-Route_AI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_ambq_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  route.py  route_stop.py  stop.py  user_query.py
backend/app/routers/: __init__.py  ai.py  auth.py  routes.py  search.py  stops.py
backend/app/schemas/: __init__.py  auth.py  route.py  search.py  stop.py
backend/app/services/: __init__.py  ai_engine.py  geo_engine.py  nominatim.py  search_engine.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/routes/: page.tsx
frontend/src/app/admin/stops/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/routes/[id]/: page.tsx
frontend/src/components/ai/: AIChat.tsx
frontend/src/components/map/: LeafletMap.tsx  MapLibreMap.tsx  PlanLayer.tsx  RouteLayer.tsx
frontend/src/components/search/: RoutePlanCard.tsx  SearchBox.tsx  SearchResults.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: useMapStore.ts
scraper/: ambq_scraper.py  geocoder.py  pyproject.toml  scraper.py  seed_ambq.py  seed_db.py
scraper/data/ambq/: resoluciones_index.json  rutas_ambq.json
